# python_for_data_science

./: .gitignore  README.md  pyproject.toml
python_0_starting/: Utils.py
python_0_starting/ex00/: Hello.py  test_hello.py
python_0_starting/ex01/: format_ft_time.py  test_format_ft_time.py
python_0_starting/ex02/: find_ft_type.py
python_0_starting/ex03/: NULL_not_found.py
python_0_starting/ex04/: whatis.py
python_0_starting/ex05/: building.py  test_building.py
python_0_starting/ex06/: filterstring.py  ft_filter.py
python_0_starting/ex07/: sos.py
python_0_starting/ex08/: Loading.py
python_0_starting/ex09/: LICENSE
python_0_starting/ex09/ft_package/: pyproject.toml
python_1_array/ex00/: give_bmi.py
python_1_array/ex01/: array2D.py
python_1_array/ex02/: load_image.py  tester.py
python_1_array/ex03/: zoom.py
python_1_array/ex04/: rotate.py
python_1_array/ex05/: my_tester.py  pimp_image.py  tester.py
python_2_data_table/ex00/: load_csv.py
python_2_data_table/ex01/: aff_life.py
python_2_data_table/ex02/: aff_pop.py  load_csv.py
python_2_data_table/ex03/: projection_life.py
python_3_oop/ex00/: S1E9.py
python_3_oop/ex01/: S1E7.py  S1E9.py
python_3_oop/ex02/: DiamondTrap.py  S1E9.py
python_3_oop/ex03/: ft_calculator.py  tester.py
python_3_oop/ex04/: ft_calculator.py  tester.py
python_4_dod/ex00/: statistics.py  tester.py
python_4_dod/ex01/: in_out.py
python_4_dod/ex02/: callLimit.py
python_4_dod/ex03/: new_student.py
